--- a/documentation/architecture/architecture-events.asciidoc
+++ b/documentation/architecture/architecture-events.asciidoc
@@ -54,6 +54,6 @@ in this case the [classname]#Button#.
 
 [[figure.eventlistenerdiagram]]
 .Class Diagram of a Button Click Listener
-image::img/events-classdiagram-hi.png[width=80%, scaledwidth=100%]
+image::img/events-classdiagram.png[width=80%, scaledwidth=100%]
 
 <<dummy/../../../framework/application/application-events#application.events,"Handling Events with Listeners">> goes into details of handling events in practice.
