--- a/documentation/layout/layout-overview.asciidoc
+++ b/documentation/layout/layout-overview.asciidoc
@@ -23,7 +23,7 @@ of the component tree.
 
 [[figure.layout.intro.schematic]]
 .Layout schematic
-image::img/layout-schematic-hi.png[width=100%, scaledwidth=100%]
+image::img/layout-schematic.png[width=100%, scaledwidth=100%]
 
 Let us look at building a bit simplified version of the layout in <<figure.layout.intro.simple>>:
 
